--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="AjaxControlToolkit" version="19.1.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
