--- a/Web.config
+++ b/Web.config
@@ -30,6 +30,7 @@
     <add name="EGovTestingConnectionString" connectionString="Data Source=192.168.10.218;Initial Catalog=Testing;Persist Security Info=True;User ID=sa;Password=P@ssw0rd" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
         <add assembly="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
