- Add ListDocuments method and still working on UploadDocument method (Simulate multithreading for upload)

--- a/Web.config
+++ b/Web.config
@@ -46,6 +46,7 @@
   </system.web>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="hrefDocuments" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\App_Data\"/>
   </appSettings>
   <system.codedom>
     <compilers>
