--- a/Web.config
+++ b/Web.config
@@ -11,11 +11,12 @@
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="C:/eGov Logs/Logs/eGovLogs"/>
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <encoding value="utf-8" />
       <appendToFile value="true"/>
       <rollingStyle value="Composite"/>
       <datePattern value="-yyyy-MM-dd'.txt'"/>
       <maxSizeRollBackups value="500"/>
-      <maximumFileSize value="100MB"/>
+      <maximumFileSize value="10GB"/>
       <staticLogFileName value="false"/>
       <layout type="log4net.Layout.PatternLayout">
         <param name="ConversionPattern" value="%newline[%date{dd MMM yyyy HH:mm:ss.fff}](%thread) %-5level: %message (%location)%newline"/>
@@ -46,7 +47,10 @@
   </system.web>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    <add key="hrefDocuments" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\App_Data\"/>
+    <add key="hrefDocumentsUploadFinal" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\documents\upload\"/>
+    <add key="hrefDocumentsUpload" value="~/documents/upload"/>
+    <add key="hrefDocumentsDownload" value="~/documents/download"/>
+    <add key="hrefFiles" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\files\"/>
   </appSettings>
   <system.codedom>
     <compilers>
