- Finished method Download document

--- a/Web.config
+++ b/Web.config
@@ -50,6 +50,7 @@
     <add key="hrefDocumentsUploadFinal" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\documents\upload\"/>
     <add key="hrefDocumentsUpload" value="~/documents/upload"/>
     <add key="hrefDocumentsDownload" value="~/documents/download"/>
+    <add key="hrefDocumentsDownloadFinal" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\documents\download\"/>
     <add key="hrefFiles" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\files\"/>
   </appSettings>
   <system.codedom>
