Change delete function to get users from DB and delete on SCIM

--- a/Web.config
+++ b/Web.config
@@ -52,6 +52,7 @@
     <add key="hrefDocumentsDownload" value="~/documents/download"/>
     <add key="hrefDocumentsDownloadFinal" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\documents\download\"/>
     <add key="hrefFiles" value="D:\Marko\Desktop\eGov\.Net\EGovTesting\EGovTesting\files\"/>
+    <add key="deleteAllUsers" value="0"/>
   </appSettings>
   <system.codedom>
     <compilers>
